--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Operations\Conversations.cs" />
     <Compile Include="Operations\DailyRevenueJobControls.cs" />
     <Compile Include="Operations\EventPortalMessages.cs" />
+    <Compile Include="Operations\EventTaskDetails.cs" />
+    <Compile Include="Operations\EventTaskUsers.cs" />
     <Compile Include="Operations\ExpenseReportApprovals.cs" />
     <Compile Include="Operations\ExpenseReportCreditCardDetails.cs" />
     <Compile Include="Operations\ExpenseReportDetails.cs" />
@@ -126,6 +128,7 @@
     <Compile Include="Operations\MarketListItems.cs" />
     <Compile Include="Operations\MarketLists.cs" />
     <Compile Include="Operations\Meetings.cs" />
+    <Compile Include="Operations\MembershipAccountItems.cs" />
     <Compile Include="Operations\MembershipCards.cs" />
     <Compile Include="Operations\MembershipEngagements.cs" />
     <Compile Include="Operations\MembershipEngagementTypes.cs" />
@@ -188,6 +191,7 @@
     <Compile Include="Operations\StatementBatches.cs" />
     <Compile Include="Operations\StatementDetails.cs" />
     <Compile Include="Operations\StatementHeaders.cs" />
+    <Compile Include="Operations\Tasks.cs" />
     <Compile Include="Operations\UserRoles.cs" />
     <Compile Include="Operations\Roles.cs" />
     <Compile Include="Operations\Users.cs" />
@@ -239,8 +243,8 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Ungerboeck.Api.Models">
-      <Version>1.98.211206.1755</Version>
+    <PackageReference Include="Ungerboeck.Api.Sdk">
+      <Version>1.98.220117.1830</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
