--- a/StartHere/StartHere.csproj
+++ b/StartHere/StartHere.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ungerboeck.Api.Models" Version="1.98.220316.1208" />
+    <PackageReference Include="Ungerboeck.Api.Models" Version="1.98.2.4" />
   </ItemGroup>
 
   <ItemGroup>
